feat: Correção de Testes Falhos e Documentação de Problemas
- Tentativa de correção dos testes falhos em CDU-02, CDU-09, CDU-10, CDU-16, CDU-17 e CDU-21.
- Adição do arquivo `problems.md` para documentar os problemas encontrados e as tentativas de correção.